--- a/test/atari2600/index.html
+++ b/test/atari2600/index.html
@@ -7,10 +7,7 @@
 	</head>
 	<body>
 		<canvas id="emulator-target" style="width: 50%; height: 50%; display: block; margin: 0 auto;"></canvas>
-		<script type="text/javascript" src="../../vendor/emularity/es6-promise.js"></script>
-		<script type="text/javascript" src="../../vendor/emularity/browserfs.js"></script>
-		<script type="text/javascript" src="../../vendor/emularity/loader.js"></script>
-		<script type="text/javascript" src="../../src/retrojolt.js"></script>
+		<script type="text/javascript" src="../../build/retrojolt.js"></script>
 		<script type="text/javascript">
 			var emulator = new RetroJolt( {
 				scale: 3,
