--- a/test/atari2600/index.html
+++ b/test/atari2600/index.html
@@ -17,7 +17,7 @@
 				cfg: '../../cfg/a2600.cfg',
 				peripherals: [ 'cart' ],
 				resolution: [ 176, 223 ],
-				rom: './avalanche.bin',
+				rom: './avalanche.a26',
 			} );
 		</script>
 	</body>
