--- a/test/gba/index.html
+++ b/test/gba/index.html
@@ -12,12 +12,13 @@
 			var emulator = new RetroJolt( {
 				loadingImg: '../../src/loading.gif',
 				scale: 3,
-				js: '../../drivers/mamea2600.js',
-				driver:  'a2600',
-				cfg: '../../cfg/a2600.cfg',
+				js: '../../drivers/mamegba.js',
+				driver: 'gba',
+				bios: [ './gba.zip' ],
+				cfg: '../../cfg/gba.cfg',
 				peripherals: [ 'cart' ],
-				resolution: [ 176, 223 ],
-				rom: './avalanche.a26',
+				resolution: [ 240, 160 ],
+				rom: './bugbash.gba',
 			} );
 		</script>
 	</body>
