--- a/test/genesis/index.html
+++ b/test/genesis/index.html
@@ -11,13 +11,13 @@
 		<script type="text/javascript">
 			var emulator = new RetroJolt( {
 				loadingImg: '../../src/loading.gif',
-				scale: 3,
-				js: '../../drivers/mamea2600.js',
-				driver:  'a2600',
-				cfg: '../../cfg/a2600.cfg',
+				scale: 2,
+				js: '../../drivers/mamegenesis.js',
+				driver: 'genesis',
+				cfg: '../../cfg/genesis.cfg',
 				peripherals: [ 'cart' ],
-				resolution: [ 176, 223 ],
-				rom: './avalanche.a26',
+				resolution: [ 320, 224 ],
+				rom: './game.md',
 			} );
 		</script>
 	</body>
