--- a/test/snes/index.html
+++ b/test/snes/index.html
@@ -11,13 +11,14 @@
 		<script type="text/javascript">
 			var emulator = new RetroJolt( {
 				loadingImg: '../../src/loading.gif',
-				scale: 3,
-				js: '../../drivers/mamea2600.js',
-				driver:  'a2600',
-				cfg: '../../cfg/a2600.cfg',
+				scale: 2,
+				js: '../../drivers/mamesnes.js',
+				driver: 'snes',
+				bios: [ './snes.zip' ],
+				cfg: '../../cfg/snes.cfg',
 				peripherals: [ 'cart' ],
-				resolution: [ 176, 223 ],
-				rom: './avalanche.a26',
+				resolution: [ 320, 224 ],
+				rom: './game.sfc',
 			} );
 		</script>
 	</body>
