--- a/test/genesis/index.html
+++ b/test/genesis/index.html
@@ -17,7 +17,7 @@
 				cfg: '../../cfg/genesis.cfg',
 				peripherals: [ 'cart' ],
 				resolution: [ 320, 224 ],
-				rom: './game.md',
+				rom: './tronow.md',
 			} );
 		</script>
 	</body>
