Got a test for virtualboy. Support is pretty bad sadly.

--- a/test/virtualboy/index.html
+++ b/test/virtualboy/index.html
@@ -13,11 +13,10 @@
 				loadingImg: '../../src/loading.gif',
 				js: '../../drivers/mamevirtualboy.js',
 				driver: 'vboy',
-				bios: [ './vboy.zip' ],
 				cfg: '../../cfg/vboy.cfg',
 				peripherals: [ 'cart' ],
 				resolution: [ 384 * 2, 224 ],
-				rom: './game.vb',
+				rom: './zpace_racers.vb',
 			} );
 		</script>
 	</body>
