Better NES test.

--- a/test/nes/index.html
+++ b/test/nes/index.html
@@ -17,7 +17,7 @@
 				cfg: '../../cfg/nes.cfg',
 				peripherals: [ 'cart' ],
 				resolution: [ 256, 240 ],
-				rom: './bingo.nes',
+				rom: './ralph4.nes',
 			} );
 		</script>
 	</body>
