Added test for snes.

--- a/test/snes/index.html
+++ b/test/snes/index.html
@@ -18,7 +18,7 @@
 				cfg: '../../cfg/snes.cfg',
 				peripherals: [ 'cart' ],
 				resolution: [ 320, 224 ],
-				rom: './game.sfc',
+				rom: './airwolf.smc',
 			} );
 		</script>
 	</body>
