fixed snes resolution!

--- a/test/snes/index.html
+++ b/test/snes/index.html
@@ -17,8 +17,8 @@
 				bios: [ './snes.zip' ],
 				cfg: '../../cfg/snes.cfg',
 				peripherals: [ 'cart' ],
-				resolution: [ 320, 224 ],
-				rom: './airwolf.smc',
+				resolution: [ 256, 225 ],
+				rom: './hilda.sfc',
 			} );
 		</script>
 	</body>
